--- a/vite-boolflix/index.html
+++ b/vite-boolflix/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Boolflix | Discover the world of entertainment</title>
+    <script src="https://kit.fontawesome.com/5da565da38.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
